--- a/ru_cococo_website/templates/about.html
+++ b/ru_cococo_website/templates/about.html
@@ -17,8 +17,7 @@
         </div>
         <nav class="navbar">
             <ul>
-                <li><a class="nav-link" href="/simple">ОБЫЧНЫЙ ПОИСК</a></li>
-                <li><a class="nav-link" href="/advanced">РАСШИРЕННЫЙ ПОИСК</a></li>
+                <li><a class="nav-link" href="/main">ПОИСК</a></li>
                 <li><a class="nav-lang" id="language-switch" data-lang="{{ lang }}" href="#">ENG</a></li>
             </ul>
         </nav>
